<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/btcLabel"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btcPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/ethLabel"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ethPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/xmrLabel"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/xmrPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="@font/aldrich"
        android:text="REFRESH"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/sourceLabel"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/label5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/authorLabel"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>